--- a/ormconfig.json
+++ b/ormconfig.json
@@ -4,8 +4,8 @@
   "host": "localhost",
   "port": 3306,
   "username": "root",
-  "password": "telemedicina2021@",
-  "database": "nspace_banco",
+  "password": "rhouse@2021",
+  "database": "rhouse_banco",
   "entities": [
     "./src/modules/**/infra/typeorm/entities/*.ts"
   ],
